Prevent crashes upon startup and/or new tab when using input methods

TerminalDisplay::inputMethodQuery causes crashes when using non-standard
input methods.   Qt::ImSurroundingText was trying to use lineProperties
of the current line, but this parameter is ignored in decodeLine anyway.

Thanks to Takahiro Hashimoto kenya888 gmail com for report, research
and patch

BUG: 341798